--- a/试卷.html
+++ b/试卷.html
@@ -107,8 +107,8 @@
         </div>
       </div>
 
-      <!-- 练习 (矩形) -->
-      <div id="u279" class="ax_default label" data-label="练习">
+      <!-- 练习icon (矩形) -->
+      <div id="u279" class="ax_default label" data-label="练习icon">
         <div id="u279_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u280" class="text" style="visibility: visible;">
