--- a/发现.html
+++ b/发现.html
@@ -107,8 +107,8 @@
         </div>
       </div>
 
-      <!-- 练习 (矩形) -->
-      <div id="u500" class="ax_default label" data-label="练习">
+      <!-- 练习icon (矩形) -->
+      <div id="u500" class="ax_default label" data-label="练习icon">
         <div id="u500_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u501" class="text" style="visibility: visible;">
