--- a/学霸榜_校霸榜.html
+++ b/学霸榜_校霸榜.html
@@ -107,8 +107,8 @@
         </div>
       </div>
 
-      <!-- 练习 (矩形) -->
-      <div id="u579" class="ax_default label" data-label="练习">
+      <!-- 练习icon (矩形) -->
+      <div id="u579" class="ax_default label" data-label="练习icon">
         <div id="u579_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u580" class="text" style="visibility: visible;">
