--- a/我.html
+++ b/我.html
@@ -107,8 +107,8 @@
         </div>
       </div>
 
-      <!-- 练习 (矩形) -->
-      <div id="u777" class="ax_default label" data-label="练习">
+      <!-- 练习icon (矩形) -->
+      <div id="u777" class="ax_default label" data-label="练习icon">
         <div id="u777_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u778" class="text" style="visibility: visible;">
