--- a/练习.html
+++ b/练习.html
@@ -105,8 +105,8 @@
         </div>
       </div>
 
-      <!-- 练习 (矩形) -->
-      <div id="u94" class="ax_default label" data-label="练习">
+      <!-- 练习icon (矩形) -->
+      <div id="u94" class="ax_default label" data-label="练习icon">
         <div id="u94_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u95" class="text" style="visibility: visible;">
